# Watchlist

./: .env.example.py  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: tests.yml
Watchlist/: __init__.py  celery_app.py  config.py  logging_config.py  main.py  tasks.py
Watchlist/application/: __init__.py
Watchlist/application/services/: __init__.py  queue_service.py
Watchlist/domain/: __init__.py  entities.py  interfaces.py
Watchlist/infrastructure/api/: kinopoisk.py
Watchlist/infrastructure/bot/: __init__.py  keyboards.py  main.py  middlewares.py
Watchlist/infrastructure/bot/handlers/: __init__.py  callbacks.py  commands.py
Watchlist/infrastructure/cache/: __init__.py  redis_client.py
Watchlist/infrastructure/db/: models.py  repositories.py  session.py
Watchlist/infrastructure/metrics/: __init__.py  server.py
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_add_watched_history.py  0003_add_chat_type_and_user_rating.py  c4eba1bb8cc2_add_year_director_chat_type_user_rating.py
scripts/: init_db.py
tests/: conftest.py  test_domain_entities.py  test_handlers.py  test_kinopoisk_client.py  test_queue_service.py  test_repositories.py
