[tool.poetry]
name = "watchlist"
version = "0.1.0"
description = "Telegram bot for shared media queue"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.0"
sqlalchemy = "^2.0"
asyncpg = "^0.29"
pydantic = "^2.0"
pydantic-settings = "^2.0"
loguru = "^0.7"
httpx = "^0.27"
python-dotenv = "^1.0"
redis = "^5.0"
prometheus-client = "^0.20"
aiohttp = "^3.9"
tenacity = "^8.2"
celery = "^5.6.3"
eventlet = "^0.36.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
black = "^24.0"
isort = "^5.13"
mypy = "^1.9"
ruff = "^0.4"
alembic = "^1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers -v"
markers = [
    "asyncio: marks tests as async",
]